--- a/font.css
+++ b/font.css
@@ -1,4 +1,4 @@
 @font-face {
   font-family: 'fontss';
-  src: url('../fonts/fontss.woff') format("fontss"),
+  src: url('../font/fontss.woff') format("fontss"),
 }
