--- a/font.css
+++ b/font.css
@@ -1,4 +1,6 @@
 @font-face {
   font-family: 'fontss';
-  src: url('../font/fontss.woff') format("fontss"),
+  src: url('../fonts/fontss.woff') format("woff"),
+         url('../fonts/fontss.ttf') format("truetype"),
+         url('../fonts/fontss.eot') format("embedded-opentype");
 }
